--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,27 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  dio: ^5.3.2
+  hooks_riverpod: ^2.1.1
   flutter:
     sdk: flutter
+  equatable: ^2.0.5
+  meta: ^1.9.1
+  pretty_dio_logger: ^1.3.1
+  dartx: ^1.2.0
+  dartz: ^0.10.1
+  pull_to_refresh: ^2.0.0
+  intl: ^0.18.1
+  mockito: ^5.4.2
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_lints: any
+  
+  build_runner: ^2.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
